<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Sudoku!</string>
    <string name="app_name">Sudoku</string>
    <string name="main_title">Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="resume_label">Resume Game</string>
    <string name="upgrade_label">Upgrade</string>
    <string name="high_scores_label">High Scores</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="tutorial">Tutorial</string>
    <string name="about_title">About Sudoku</string>
    <string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="timer_title">Timer</string>
    <string name="timer_summary">Show Timer during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="get_more_puzzles_online">Get more puzzles online</string>


    <string name="no_puzzles">No puzzles</string>
    <string name="one_puzzle">1 puzzle</string>
    <string name="n_puzzles">%s puzzles</string>
    <string name="all_solved">all solved</string>
    <string name="n_solved">%s solved</string>
    <string name="n_unsolved">%s unsolved</string>
    <string name="n_playing">%s playing</string>

    <string name="undo">Undo</string>
    <string name="clear_all_notes">Clear all notes</string>
    <string name="restart">Restart</string>
    <string name="congrats">Congratulations, you have solved the puzzle in %s.</string>
    <string name="restart_confirm">Are you sure you want to restart this game?</string>
    <string name="well_done">Well Done!</string>
    <string name="clear_all_notes_confirm">Are you sure you want to clear all notes?</string>
    <string name="settings">Settings</string>
    <string name="game_settings">Game settings</string>

    <string name="game_helpers">Game Helpers</string>
    <string name="numpad">Numpad</string>


    <string name="numpad_abbr">Num\nPad</string>
    <string name="popup_abbr">Pop</string>
    <string name="single_number_abbr">SN</string>
    <string name="welcome">Welcome</string>
    <string name="hint">Hint</string>
    <string name="help">Help</string>
    <string name="that_is_all">That\'s all</string>


    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_easy">Easy</string>

</resources>