<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/capture"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip"
    android:weightSum="1">

    <Button
        android:id="@+id/tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial"
        android:layout_weight="0.11"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/new_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_label"
        android:background="@android:color/transparent"
        android:layout_weight="0.11"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume_label"
        android:background="@android:color/transparent"
        android:layout_weight="0.11"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/highscores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_scores_label"
        android:background="@android:color/transparent"
        android:layout_weight="0.11"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/upgrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_label"
        android:background="@android:color/transparent"
        android:layout_weight="0.11"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_label"
        android:background="@android:color/transparent"
        android:layout_weight="0.11"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label"
        android:background="@android:color/transparent"
        android:layout_weight="0.11"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

</LinearLayout>